test/pass/generics/generics_apply.lly
define f[A](input: A => A) {
    var v = [input, input, input]
    v[0]
    v[1]
    return v[0]
}

[1, 1.1, "1"].apply(f)
