test/fail/internal/expr_after_return.lly
#[
SyntaxError: Statement(s) after 'return' will not execute.
    from expr_after_return.lly:9
]#

define f( => integer)
{
    return 1
    var v = 2
}
